Fix the layout section on the overview page.
The placeholders CSS rules were missing and are now added.

We make the .wrapper padding thinner, to make it easier to differentiate
padding that is added by the layouting primitive.

We also add the .inset variant.

Finally, we add some content to the .box layout, to be consistent with
the presentation of other primitives.

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -3,11 +3,11 @@
    each others.
  */
 .wrapper {
-  padding: calc(var(--grid-gutter) / 2);
-  border: 2px dashed purple;
+  padding: calc(var(--grid-gutter) / 3);
+  outline: 2px dashed purple;
 }
 .wrapper + .wrapper {
-  margin-top: calc(var(--grid-gutter) / 2);
+  margin-top: calc(var(--grid-gutter) / 3);
 }
 
 .u-container {
