--- a/struct/templates/specimens/overview.pug
+++ b/struct/templates/specimens/overview.pug
@@ -6,6 +6,7 @@ html(dir="ltr", lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="/static/css/struct.css")
         link(rel="stylesheet", href="/static/css/struct/lorem.css")
+        link(rel="stylesheet", href="/static/css/struct/placeholders.css")
     body
         .u-container.c-text.flow-all
           h1 Overview
@@ -320,8 +321,15 @@ html(dir="ltr", lang="en")
 
         .u-container
             .c-text.flow-all
+                h1 Inset
+            .inset.wrapper
+                .b-x64
+
+        .u-container
+            .c-text.flow-all
                 h1 Box
             .box
+                .b-x64
 
         .u-container
             .c-text.flow-all
