Add a "logo" variant.

--- a/struct/templates/specimens/logo.pug
+++ b/struct/templates/specimens/logo.pug
@@ -25,3 +25,5 @@ html(dir="ltr", lang="en")
                     span.logo cty
                 div
                     span.logo Reesd
+                div
+                    span.logo Logo
