--- a/struct/scss/struct/layouts.scss
+++ b/struct/scss/struct/layouts.scss
@@ -1,4 +1,58 @@
+// This defines layouts.
 
+// Container. Add some room left and right of its content. This has also the
+// added benefit of restricting its maximum horizontal dimension.
+
+.u-container {
+  min-width: calc(15.1rem - 2 * var(--grid-gutter));
+  max-width: var(--grid-max-width);
+  padding-inline: var(--grid-gutter);
+  margin-inline: auto;
+}
+
+.u-container-vertical {
+  // TODO I'd like the padding-top to be the same as the flow-all for a c-text
+  // h1. I.e. using flow-all or using u-container-vertical should be the same.
+  // In addition, a c-text h1 could also match the position of the Refli logo
+  // in the navigation bar.
+
+  padding-block: var(--grid-gutter);
+}
+.u-container-top {
+  padding-block-start: var(--grid-gutter);
+}
+
+// Inset. Add some room around its content.
+
+.inset {
+  padding: var(--grid-gutter);
+}
+
+// Box. Similar to inset, with a border.
+// Similar to Panel in Mono's work ?
+.box {
+  padding: var(--grid-gutter);
+  border: 2px solid black;
+}
+
+// Bar. Separate items organized horizontally.
+
+.u-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.u-bar__left {
+}
+.u-bar__right {
+  ul li {
+    display: inline;
+    margin-left: var(--space-s);
+  }
+}
+
+// Switcher. Separate items organized horizontally, or vertically if the parent
+// is too narrow.
 
 .switcher {
   display: flex;
