--- a/struct/templates/specimens/type-scale-b.pug
+++ b/struct/templates/specimens/type-scale-b.pug
@@ -7,6 +7,7 @@ html(dir="ltr", lang="en")
         link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
         link(rel="stylesheet", href="/static/css/struct/fonts.css")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
+        link(rel="stylesheet", href="/static/css/struct/layouts.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
     body
         .u-container
