--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -3,11 +3,7 @@ html(dir="ltr", lang="en")
     head
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="/static/css/struct/foundations.css")
-        link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
-        link(rel="stylesheet", href="/static/css/struct/fonts.css")
-        link(rel="stylesheet", href="/static/css/struct/scale.css")
-        link(rel="stylesheet", href="/static/css/struct/misc.css")
+        link(rel="stylesheet", href="/static/css/struct.css")
     body.u-container-vertical
         .u-container
             .c-text.flow
@@ -72,7 +68,7 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/tachyons.html") Tachyons
                     li
-                        a(href="/specimens/logo.html") logo
+                        a(href="/specimens/logo.html") Logo
 
                 h2 Prototypes
                 p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
