Start implementing Struct in Haskell.

--- a/struct/scss/struct.scss
+++ b/struct/scss/struct.scss
@@ -4,6 +4,7 @@
 @import "struct/ibm-plex";
 @import "struct/fonts";
 @import "struct/scale";
+@import "struct/layouts";
 @import "struct/misc";
 @import "struct/layouts";
 
