--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -60,6 +60,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/buttons.html") Buttons
                     li
+                        a(href="/specimens/navigation.html") Navigation
+                    li
                         a(href="/specimens/cover.html") Cover
                     li
                         a(href="/specimens/form.html") Form
