Try to style a belgian Official journal ELI index.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -90,3 +90,9 @@ html(dir="ltr", lang="en")
                         a(href="/prototypes/refli/reset.html") Reset password
                     li
                         a(href="/prototypes/refli/describe.html") Salary computation form
+                    li
+                        a(href="/prototypes/refli/motherboard-index.html") Motherboard index (one)
+                    li
+                        a(href="/prototypes/refli/motherboard-index-2.html") Motherboard index (many)
+                    li
+                        a(href="/prototypes/refli/motherboard-index-dense.html") Motherboard index (dense)
