Try to style a Justel document.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -96,3 +96,5 @@ html(dir="ltr", lang="en")
                         a(href="/prototypes/refli/motherboard-index-2.html") Motherboard index (many)
                     li
                         a(href="/prototypes/refli/motherboard-index-dense.html") Motherboard index (dense)
+                    li
+                        a(href="/prototypes/refli/motherboard-document.html") Motherboard document
