--- a/struct/templates/prototypes/refli/motherboard-document.pug
+++ b/struct/templates/prototypes/refli/motherboard-document.pug
@@ -38,6 +38,43 @@ html(dir="ltr", lang="en")
             .c-text.flow-all.limit-42em.legislation
                 h1.title 15 JUILLET 2016. — Arrêté royal modifiant l'arrêté royal du 19 décembre 1967 portant règlement général en exécution de l'arrêté royal n° 38 du 27 juillet 1967 organisant le statut social des travailleurs indépendants
 
+                style.
+                  .pairs {
+                    display: grid;
+                    grid-template-columns: repeat(auto-fit, minmax(10ch, 1fr));
+                    grid-gap: 1em;
+                  }
+                  .pairs dt {
+                    grid-column-start: 1;
+                    /* I should separate layouting and styling. */
+                    font-weight: 500;
+                  }
+                  .pairs dd {
+                    grid-column-start: span 1;
+                  }
+                div
+                    dl.pairs
+                        dt ELI
+                        dd <a href="https://www.ejustice.just.fgov.be/eli/arrete/2016/07/15/2016022330/justel">Justel</a>
+                        dt Source
+                        dd SECURITE SOCIALE
+                        dt Publication
+                        dd 29-07-2016
+                        dt Numéro
+                        dd 2016022330
+                        dt Page
+                        dd 46383
+                        dt PDF
+                        dd <a href="https://www.ejustice.just.fgov.be/mopdf/2016/07/29_1.pdf#Page29">version originale</a>
+                        dt Dossier numéro
+                        dd 2016-07-15/06
+                        dt Entrée en vigueur / Effet
+                        dd 29-07-2016
+                        dt Texte modifié
+                        dd 1967121910  
+                        dt belgiquelex
+                        dd <a href="http://reflex.raadvst-consetat.be/reflex/?page=chrono&c=detail_get&d=detail&docid=133915&tab=chrono">Conseil d'Etat</a>
+
                 .menu-item(tabindex="-1")
                     i.menu-mask(tabindex="-1")
                     a.menu-dropdown Préambule
