--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -73,7 +73,7 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/logo.html") Logo
 
                 h2 Prototypes
-                p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
+                p These are (meant to be) complete, high-fidelity pages for existing or future application pages, including occasional variants.
                 h3 Refli
                 ul
                     li
@@ -90,11 +90,18 @@ html(dir="ltr", lang="en")
                         a(href="/prototypes/refli/reset.html") Reset password
                     li
                         a(href="/prototypes/refli/describe.html") Salary computation form
+                h3 Lex Iterata
+                p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
+                ul
                     li
-                        a(href="/prototypes/refli/motherboard-index.html") Motherboard index (one)
+                        a(href="/prototypes/refli/motherboard-index.html") Index (one entry)
+                        |
+                        | -
+                        |
+                        a(href="https://www.ejustice.just.fgov.be/eli/constitution/1831") Original
                     li
-                        a(href="/prototypes/refli/motherboard-index-2.html") Motherboard index (many)
+                        a(href="/prototypes/refli/motherboard-index-2.html") Index (many entries)
                     li
-                        a(href="/prototypes/refli/motherboard-index-dense.html") Motherboard index (dense)
+                        a(href="/prototypes/refli/motherboard-index-dense.html") Index (dense version)
                     li
-                        a(href="/prototypes/refli/motherboard-document.html") Motherboard document
+                        a(href="/prototypes/refli/motherboard-document.html") Justel document
