--- a/struct/templates/prototypes/refli/motherboard-index.pug
+++ b/struct/templates/prototypes/refli/motherboard-index.pug
@@ -9,16 +9,25 @@ html(dir="ltr", lang="en")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
         link(rel="stylesheet", href="/static/css/struct/layouts.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
-    body
-        .u-container
-            .c-text.flow-all
-                h1 Lex Iterata
-                p Attempt at presenting a better Belgian official journal ELI index.
+    body.u-container-vertical.cover
+        header
+            .u-container
+                .c-text
+                    style.
+                      .logo {font-weight: 700; font-size: 2rem; letter-spacing: -0.05rem;}
+                      .logo a {color: black;}
 
+                    div
+                        span.logo
+                            a(href="motherboard-index.html") Lex Iterata
+
+        .u-container
             style.
+              .custom { margin-top: 2em; /* TODO Replace with a spacer utility. */}
               .custom p.first-line span { display: inline-block; width: 3em; text-align: right; margin-right: 1em;}
               .custom p.second-line { margin-left: 4em; color: #444;}
               .custom p.second-line small span { margin-left: 4em;}
+
             .c-text.custom
                 p.first-line
                   span 1.
@@ -30,3 +39,10 @@ html(dir="ltr", lang="en")
                     span <a href=#>Justel</a>
                     span Source: -
 
+        footer
+            .u-container
+                hr
+                .c-text.flow
+                    p
+                        small Lex Iterata is a Refli experiment. <a href="motherboard-index.html">Read more.</a>
+                    p © Hypered SRL, 2023.
