--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -94,13 +94,19 @@ html(dir="ltr", lang="en")
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
                 ul
                     li
-                        a(href="/prototypes/refli/motherboard-index.html") Index (one entry)
+                        a(href="/prototypes/refli/motherboard-index.html") Homepage
+                    li
+                        a(href="/prototypes/refli/motherboard-index-1.html") Index (one entry)
                         |
                         | -
                         |
                         a(href="https://www.ejustice.just.fgov.be/eli/constitution/1831") Original
                     li
                         a(href="/prototypes/refli/motherboard-index-2.html") Index (many entries)
+                        |
+                        | -
+                        |
+                        a(href="https://www.ejustice.just.fgov.be/eli/loi/2022") Original
                     li
                         a(href="/prototypes/refli/motherboard-index-dense.html") Index (dense version)
                     li
