Use a JSON file to provide all 2022 law entries.

--- a/struct/templates/prototypes/refli/motherboard-index-2.pug
+++ b/struct/templates/prototypes/refli/motherboard-index-2.pug
@@ -29,7 +29,7 @@ html(dir="ltr", lang="en")
                 gap: 1em;
                 justify-content: flex-start;
               }
-              .entry + .entry {margin-top: 1em;}
+              .entry {margin-top: 1em;}
               .num {width: 3em; text-align: right; flex-grow: 0; flex-shrink: 0;}
               .second-line {color: #555; margin-top: 0.5em;}
               .second-line span {margin-left: 4em;}
