--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -110,4 +110,6 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/motherboard-index-dense.html") Index (dense version)
                     li
+                        a(href="/prototypes/refli/motherboard-index-data.html") Index (dense and complete)
+                    li
                         a(href="/prototypes/refli/motherboard-document.html") Justel document
