Move the .breadcrumb CSS to misc.scss.

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -447,3 +447,7 @@ a.c-button--secondary {
 // See https://hypered.design/specimens/logo.html.
 .logo {font-weight: 700; font-size: 2rem; letter-spacing: -0.05rem;}
 .logo a {color: black;}
+
+
+// Used for simple / bread / crumbs.
+.breadcrumb { color: #555; }
