--- a/struct/templates/prototypes/refli/motherboard-index-data.pug
+++ b/struct/templates/prototypes/refli/motherboard-index-data.pug
@@ -16,6 +16,7 @@ html(dir="ltr", lang="en")
                     div
                         span.logo
                             a(href="motherboard-index.html") Lex Iterata
+
         .u-container
             p
                 small.breadcrumb Loi / 2022
@@ -35,7 +36,8 @@ html(dir="ltr", lang="en")
               .entry {margin-top: 1em;}
               .num {width: 3em; text-align: right; flex-grow: 0; flex-shrink: 0;}
               .grow {flex-grow: 1;}
-              .second-line {color: #555; margin-top: 0em; display: flex; justify-content: space-between;}
+              .second-line {color: #555; margin-top: 0.5em;}
+              .second-line--dense {color: #555; margin-top: 0em; display: flex; justify-content: space-between;}
               .second-line span {margin-left: 4em;}
               .second-line p + p {margin-top: -0.3em;}
             .c-text
@@ -45,7 +47,7 @@ html(dir="ltr", lang="en")
                     p= index + 1 + '.'
                   div.grow
                     p= entry['title-fr']
-                    .second-line
+                    .second-line.second-line--dense
                       p
                         small
                           | Publié le
