--- a/struct/templates/prototypes/refli/motherboard-index-dense.pug
+++ b/struct/templates/prototypes/refli/motherboard-index-dense.pug
@@ -16,7 +16,10 @@ html(dir="ltr", lang="en")
                     div
                         span.logo
                             a(href="motherboard-index.html") Lex Iterata
+
         .u-container
+            p
+                small.breadcrumb Loi / 2022
 
             style.
               .entry {
@@ -29,7 +32,8 @@ html(dir="ltr", lang="en")
               .entry {margin-top: 1em;}
               .num {width: 3em; text-align: right; flex-grow: 0; flex-shrink: 0;}
               .grow {flex-grow: 1;}
-              .second-line {color: #555; margin-top: 0em; display: flex; justify-content: space-between;}
+              .second-line {color: #555; margin-top: 0.5em;}
+              .second-line--dense {color: #555; margin-top: 0em; display: flex; justify-content: space-between;}
               .second-line span {margin-left: 4em;}
               .second-line p + p {margin-top: -0.3em;}
             .c-text
@@ -38,7 +42,7 @@ html(dir="ltr", lang="en")
                   p 1.
                 div.grow
                   p 19 JANVIER 2022. - Loi portant le livre 2, titre 3, "Les relations patrimoniales des couples" et le livre 4 "Les successions, donations et testaments" du Code civil (1)
-                  .second-line
+                  .second-line.second-line--dense
                     p
                       small
                         | Publié le 14-03-2022
@@ -53,7 +57,7 @@ html(dir="ltr", lang="en")
                   p 2.
                 div.grow
                   p 19 JANVIER 2022. - CODE CIVIL - LIVRE 2, Titre 3 : " Les relations patrimoniales des couples "
-                  .second-line
+                  .second-line.second-line--dense
                     p
                       small
                         | Publié le 14-03-2022
@@ -68,7 +72,7 @@ html(dir="ltr", lang="en")
                   p 3.
                 div.grow
                   p 19 JANVIER 2022. - CODE CIVIL - LIVRE 4 : " Les successions, donations et testaments "
-                  .second-line
+                  .second-line.second-line--dense
                     p
                       small
                         | Publié le 14-03-2022
@@ -83,7 +87,7 @@ html(dir="ltr", lang="en")
                   p 4.
                 div.grow
                   p 21 JANVIER 2022. - Loi portant des dispositions fiscales diverses (1)
-                  .second-line
+                  .second-line.second-line--dense
                     p
                       small
                         | Publié le 28-01-2022
