--- a/struct/templates/prototypes/refli/motherboard-index-1.pug
+++ b/struct/templates/prototypes/refli/motherboard-index-1.pug
@@ -21,28 +21,13 @@ html(dir="ltr", lang="en")
             p
                 small.breadcrumb Constitution / 1831
 
-            style.
-              .entry {
-                display: flex;
-                gap: 1em;
-                justify-content: flex-start;
-                padding-right: 0.5em;
-              }
-              .entry:hover {background-color: #F5F5F5;}
-              .entry {margin-top: 1em;}
-              .num {width: 3em; text-align: right; flex-grow: 0; flex-shrink: 0;}
-              .grow {flex-grow: 1;}
-              .second-line {color: #555; margin-top: 0.5em;}
-              .second-line--dense {color: #555; margin-top: 0em; display: flex; justify-content: space-between;}
-              .second-line span {margin-left: 4em;}
-              .second-line p + p {margin-top: -0.3em;}
             .c-text.limit-42em
-              .entry
-                div.num
+              .mb-entry
+                div.mb-num
                   p 1.
                 div
                   p 7 FEVRIER 1831. - CONSTITUTION DE LA BELGIQUE.
-                  .second-line
+                  .mb-second-line
                     p
                       small
                         | Publié le 07-02-1831
