--- a/struct/templates/prototypes/refli/motherboard-index-2.pug
+++ b/struct/templates/prototypes/refli/motherboard-index-2.pug
@@ -21,28 +21,13 @@ html(dir="ltr", lang="en")
             p
                 small.breadcrumb Loi / 2022
 
-            style.
-              .entry {
-                display: flex;
-                gap: 1em;
-                justify-content: flex-start;
-                padding-right: 0.5em;
-              }
-              .entry:hover {background-color: #F5F5F5;}
-              .entry {margin-top: 1em;}
-              .num {width: 3em; text-align: right; flex-grow: 0; flex-shrink: 0;}
-              .grow {flex-grow: 1;}
-              .second-line {color: #555; margin-top: 0.5em;}
-              .second-line--dense {color: #555; margin-top: 0em; display: flex; justify-content: space-between;}
-              .second-line span {margin-left: 4em;}
-              .second-line p + p {margin-top: -0.3em;}
             .c-text.limit-42em
-              .entry
-                div.num
+              .mb-entry
+                div.mb-num
                   p 1.
                 div
                   p 19 JANVIER 2022. - Loi portant le livre 2, titre 3, "Les relations patrimoniales des couples" et le livre 4 "Les successions, donations et testaments" du Code civil (1)
-                  .second-line
+                  .mb-second-line
                     p
                       small
                         | Publié le 14-03-2022
@@ -51,12 +36,12 @@ html(dir="ltr", lang="en")
                     p
                       small SERVICE PUBLIC FEDERAL JUSTICE
 
-              .entry
-                div.num
+              .mb-entry
+                div.mb-num
                   p 2.
                 div
                   p 19 JANVIER 2022. - CODE CIVIL - LIVRE 2, Titre 3 : " Les relations patrimoniales des couples "
-                  .second-line
+                  .mb-second-line
                     p
                       small
                         | Publié le 14-03-2022
@@ -65,12 +50,12 @@ html(dir="ltr", lang="en")
                     p
                       small JUSTICE
 
-              .entry
-                div.num
+              .mb-entry
+                div.mb-num
                   p 3.
                 div
                   p 19 JANVIER 2022. - CODE CIVIL - LIVRE 4 : " Les successions, donations et testaments "
-                  .second-line
+                  .mb-second-line
                     p
                       small
                         | Publié le 14-03-2022
@@ -79,12 +64,12 @@ html(dir="ltr", lang="en")
                     p
                       small JUSTICE
 
-              .entry
-                div.num
+              .mb-entry
+                div.mb-num
                   p 4.
                 div
                   p 21 JANVIER 2022. - Loi portant des dispositions fiscales diverses (1)
-                  .second-line
+                  .mb-second-line
                     p
                       small
                         | Publié le 28-01-2022
