Remove unneeded div keywords.

--- a/struct/templates/prototypes/refli/motherboard-index-1.pug
+++ b/struct/templates/prototypes/refli/motherboard-index-1.pug
@@ -23,7 +23,7 @@ html(dir="ltr", lang="en")
 
             .c-text.limit-42em
               .mb-entry
-                div.mb-num
+                .mb-num
                   p 1.
                 div
                   p 7 FEVRIER 1831. - CONSTITUTION DE LA BELGIQUE.
