--- a/struct/templates/prototypes/refli/motherboard-index-dense.pug
+++ b/struct/templates/prototypes/refli/motherboard-index-dense.pug
@@ -23,9 +23,9 @@ html(dir="ltr", lang="en")
 
             .c-text
               .mb-entry
-                div.mb-num
+                .mb-num
                   p 1.
-                div.mb-grow
+                .mb-grow
                   p 19 JANVIER 2022. - Loi portant le livre 2, titre 3, "Les relations patrimoniales des couples" et le livre 4 "Les successions, donations et testaments" du Code civil (1)
                   .mb-second-line.mb-second-line--dense
                     p
@@ -38,9 +38,9 @@ html(dir="ltr", lang="en")
                         span <a href=#>Justel</a>
 
               .mb-entry
-                div.mb-num
+                .mb-num
                   p 2.
-                div.mb-grow
+                .mb-grow
                   p 19 JANVIER 2022. - CODE CIVIL - LIVRE 2, Titre 3 : " Les relations patrimoniales des couples "
                   .mb-second-line.mb-second-line--dense
                     p
@@ -53,9 +53,9 @@ html(dir="ltr", lang="en")
                         span <a href=#>Justel</a>
 
               .mb-entry
-                div.mb-num
+                .mb-num
                   p 3.
-                div.mb-grow
+                .mb-grow
                   p 19 JANVIER 2022. - CODE CIVIL - LIVRE 4 : " Les successions, donations et testaments "
                   .mb-second-line.mb-second-line--dense
                     p
@@ -68,9 +68,9 @@ html(dir="ltr", lang="en")
                         span <a href=#>Justel</a>
 
               .mb-entry
-                div.mb-num
+                .mb-num
                   p 4.
-                div.mb-grow
+                .mb-grow
                   p 21 JANVIER 2022. - Loi portant des dispositions fiscales diverses (1)
                   .mb-second-line.mb-second-line--dense
                     p
