--- a/struct/templates/prototypes/refli/motherboard-index-data.pug
+++ b/struct/templates/prototypes/refli/motherboard-index-data.pug
@@ -54,5 +54,9 @@ html(dir="ltr", lang="en")
                 hr
                 .c-text.flow
                     p
-                        small Lex Iterata is a Refli experiment. <a href="motherboard-index.html">Read more.</a>
+                        small View this page in <a href="#">JSON format</a>.
+                    p
+                        small View the <a href="https://www.ejustice.just.fgov.be/eli/loi/2022">original page</a> on the Belgian Official Journal.
+                    p
+                        small Lex Iterata is a Refli experiment. <a href="motherboard-index.html">Read more</a> or go <a href="/prototypes/refli/index-constant.html">back to Refli</a>.
                     p © Hypered SRL, 2023.
