--- a/struct/templates/prototypes/refli/motherboard-document.pug
+++ b/struct/templates/prototypes/refli/motherboard-document.pug
@@ -15,45 +15,11 @@ html(dir="ltr", lang="en")
                 h1 Lex Iterata
                 p Attempt at presenting a better Belgian official document (actually, a Justel one). Note: we replaced manually the quotation marks with guillemets, as in the PDF, and used italics in some places, as in the PDF. The dash after the date in the title is replaced by an em dash. The collapsible preamble and signature blocks are exclusive (as they use focus, instead of e.g. checkboxes).
 
-            style.
-              h1.title {text-indent: 1.8em; text-align: justify;}
-              .legislation p {text-indent: 1em;}
-              .legislation p.first {text-indent: 3em;}
-              .legislation p.second {text-indent: 3em; margin-top: 0;}
-              .article {color: #666;}
-              .article:after {
-                content: '\00a0\00a0';
-              }
-              i {font-style: italic;}
-              .menu-item .menu-dropdown-content-2 {
-                display: none;
-              }
-              /* Show the dropdown content when focused. */
-              .menu-item:focus .menu-dropdown-content-2 {
-                display: block;
-                padding-left: 2em;
-                border-left: 4px solid #DFDFDF;
-              }
-
             .c-text.flow-all.limit-42em.legislation
-                h1.title 15 JUILLET 2016. — Arrêté royal modifiant l'arrêté royal du 19 décembre 1967 portant règlement général en exécution de l'arrêté royal n° 38 du 27 juillet 1967 organisant le statut social des travailleurs indépendants
+                h1.mb-title 15 JUILLET 2016. — Arrêté royal modifiant l'arrêté royal du 19 décembre 1967 portant règlement général en exécution de l'arrêté royal n° 38 du 27 juillet 1967 organisant le statut social des travailleurs indépendants
 
-                style.
-                  .pairs {
-                    display: grid;
-                    grid-template-columns: repeat(auto-fit, minmax(10ch, 1fr));
-                    grid-gap: 1em;
-                  }
-                  .pairs dt {
-                    grid-column-start: 1;
-                    /* I should separate layouting and styling. */
-                    font-weight: 500;
-                  }
-                  .pairs dd {
-                    grid-column-start: span 1;
-                  }
                 div
-                    dl.pairs
+                    dl.mb-pairs
                         dt ELI
                         dd <a href="https://www.ejustice.just.fgov.be/eli/arrete/2016/07/15/2016022330/justel">Justel</a>
                         dt Source
@@ -78,7 +44,7 @@ html(dir="ltr", lang="en")
                 .menu-item(tabindex="-1")
                     i.menu-mask(tabindex="-1")
                     a.menu-dropdown Préambule
-                    .menu-dropdown-content-2
+                    .menu-dropdown-content-mb
 
                         p.first PHILIPPE, Roi des Belges,
                         p.second A tous, présents et à venir, Salut.
@@ -110,12 +76,12 @@ html(dir="ltr", lang="en")
                 p
                     span.article
                         | Art. 4.
-                    | Dans l'article 44<i>bis</i>, § 2, alinéa 1 et 2, du même arrêté, modifié en dernier lieu par l'arrêté royal du 6 avril 2010, les mots « au plus tard le jour du début » sont remplacés chaque fois par les mots « avant le début ».
+                    | Dans l'article 44<i class="mb-i">bis</i>, § 2, alinéa 1 et 2, du même arrêté, modifié en dernier lieu par l'arrêté royal du 6 avril 2010, les mots « au plus tard le jour du début » sont remplacés chaque fois par les mots « avant le début ».
 
                 p
                     span.article
                         | Art. 5.
-                    | Le présent arrêté entre en vigueur le jour de sa publication au <i>Moniteur belge</i>.
+                    | Le présent arrêté entre en vigueur le jour de sa publication au <i class="mb-i">Moniteur belge</i>.
 
                 p
                     span.article
@@ -125,7 +91,7 @@ html(dir="ltr", lang="en")
                 .menu-item(tabindex="-1")
                     i.menu-mask(tabindex="-1")
                     a.menu-dropdown Signature
-                    .menu-dropdown-content-2
+                    .menu-dropdown-content-mb
 
                         p.first Donné à Bruxelles, le 15 juillet 2016.
                         p PHILIPPE
