Add pikchr example.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -71,6 +71,8 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/tachyons.html") Tachyons
                     li
                         a(href="/specimens/logo.html") Logo
+                    li
+                        a(href="/specimens/pikchr.html") Pikchr
 
                 h2 Prototypes
                 p These are (meant to be) complete, high-fidelity pages for existing or future application pages, including occasional variants.
