Add blog post example for Refli.

--- a/struct/templates/includes/main-header--page-struct.pug
+++ b/struct/templates/includes/main-header--page-struct.pug
@@ -2,6 +2,10 @@
 ul
     li
         .menu-item
+            a(href="/prototypes/refli/blog-post.html").menu-link Blog
+
+    li
+        .menu-item
             a(href="#").menu-link Documentation
 
     li
