--- a/struct/templates/layouts/refli/page.pug
+++ b/struct/templates/layouts/refli/page.pug
@@ -62,4 +62,4 @@ html(dir="ltr", lang="en")
                                 a(href="#") Professional tax withholding details
 
                 .flow.u-flow-c-4
-                    span © Hypered SRL, 2023.
+                    span © Hypered SRL, 2023-2024.
