--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -92,6 +92,8 @@ html(dir="ltr", lang="en")
                         a(href="/prototypes/refli/reset.html") Reset password
                     li
                         a(href="/prototypes/refli/describe.html") Salary computation form
+                    li
+                        a(href="/prototypes/refli/blog-post.html") Blog post
                 h3 Lex Iterata
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
                 ul
